--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "appexpo",
-    "slug": "appexpo",
+    "name": "instagran_page",
+    "slug": "instagran_page",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
